# ClipShelf

./: CMakeLists.txt  LICENSE  README.md  gen.bat
src/: main.cpp
